--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "test:generate-output": "jest --json --outputFile=.jest-test-results.json",
-    "t": "jest --json --outputFile=button.testResults.json"
+    "t": "jest --json --outputFile=button.testResults.json",
+    "test": "npx jest src",
+    "test:watch": "npm run test -- --watch"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
     "@storybook/addon-actions": "^6.5.15",
     "@storybook/addon-essentials": "^6.5.15",
     "@storybook/addon-interactions": "^6.5.15",
@@ -24,12 +27,22 @@
     "@storybook/svelte": "^6.5.15",
     "@storybook/testing-library": "^0.0.13",
     "@sveltejs/vite-plugin-svelte": "^1.0.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/svelte": "^3.2.2",
+    "@testing-library/user-event": "^14.4.3",
     "@tsconfig/svelte": "^3.0.0",
+    "babel-jest": "^29.3.1",
     "babel-loader": "^8.3.0",
+    "babel-plugin-transform-vite-meta-env": "^1.0.3",
     "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "jest-transform-stub": "^2.0.0",
     "svelte": "^3.55.0",
     "svelte-check": "^2.10.0",
+    "svelte-jester": "^2.3.2",
     "svelte-loader": "^3.1.4",
+    "svelte-preprocess": "^5.0.0",
+    "ts-jest": "^29.0.3",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
