--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-jest": "^29.3.1",
     "babel-loader": "^8.3.0",
     "babel-plugin-transform-vite-meta-env": "^1.0.3",
+    "canvas": "^2.11.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "jest-transform-stub": "^2.0.0",
