--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
+    "@popperjs/core": "^2.11.6",
     "@storybook/addon-actions": "^6.5.15",
     "@storybook/addon-essentials": "^6.5.15",
     "@storybook/addon-interactions": "^6.5.15",
@@ -32,19 +33,31 @@
     "@testing-library/user-event": "^14.4.3",
     "@tsconfig/svelte": "^3.0.0",
     "@types/jest": "^29.2.5",
+    "autoprefixer": "^10.4.7",
     "babel-jest": "^29.3.1",
     "babel-loader": "^8.3.0",
     "babel-plugin-transform-vite-meta-env": "^1.0.3",
     "canvas": "^2.11.0",
+    "chart.js": "^4.2.0",
+    "chartjs-adapter-moment": "^1.0.1",
+    "chartjs-plugin-zoom": "^2.0.0",
+    "classnames": "^2.3.2",
+    "flowbite": "^1.6.3",
+    "flowbite-svelte": "^0.29.12",
     "jest": "^29.3.1",
     "jest-canvas-mock": "^2.4.0",
     "jest-environment-jsdom": "^29.3.1",
     "jest-transform-stub": "^2.0.0",
+    "moment": "^2.29.4",
+    "postcss": "^8.4.14",
+    "postcss-load-config": "^4.0.1",
     "svelte": "^3.55.0",
+    "svelte-chartjs": "^3.1.2",
     "svelte-check": "^2.10.0",
     "svelte-jester": "^2.3.2",
     "svelte-loader": "^3.1.4",
-    "svelte-preprocess": "^5.0.0",
+    "svelte-preprocess": "^4.10.7",
+    "tailwindcss": "^3.1.5",
     "ts-jest": "^29.0.3",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3",
