--- a/package.json
+++ b/package.json
@@ -42,13 +42,17 @@
     "chartjs-adapter-moment": "^1.0.1",
     "chartjs-plugin-zoom": "^2.0.0",
     "classnames": "^2.3.2",
+    "d3fc": "^15.2.6",
     "flowbite": "^1.6.3",
     "flowbite-svelte": "^0.29.12",
     "jest": "^29.3.1",
     "jest-canvas-mock": "^2.4.0",
     "jest-environment-jsdom": "^29.3.1",
     "jest-transform-stub": "^2.0.0",
+    "jest-webgl-canvas-mock": "^0.2.3",
     "moment": "^2.29.4",
+    "pixi-viewport": "^4.38.0",
+    "pixi.js": "^7.1.2",
     "postcss": "^8.4.14",
     "postcss-load-config": "^4.0.1",
     "svelte": "^3.55.0",
@@ -87,7 +91,12 @@
       "@testing-library/jest-dom/extend-expect"
     ],
     "setupFiles": [
-      "jest-canvas-mock"
+      "jest-canvas-mock",
+      "jest-webgl-canvas-mock"
     ]
+  },
+  "dependencies": {
+    "@types/d3": "^7.4.0",
+    "d3": "^7.8.2"
   }
 }
