chartjs, plotly를 이용한 차트 컴포넌트 개발 완료
- chartjs에 web worker, offscreen을 적용한 차트를 개발 했습니다.
- plotly를 이용한 차트를 개발 했습니다.

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@tsconfig/svelte": "^3.0.0",
     "@types/jest": "^29.2.5",
+    "@types/plotly.js-basic-dist": "^1.54.1",
     "autoprefixer": "^10.4.7",
     "babel-jest": "^29.3.1",
     "babel-loader": "^8.3.0",
@@ -53,6 +54,7 @@
     "moment": "^2.29.4",
     "pixi-viewport": "^4.38.0",
     "pixi.js": "^7.1.2",
+    "plotly.js-basic-dist": "^2.18.2",
     "postcss": "^8.4.14",
     "postcss-load-config": "^4.0.1",
     "svelte": "^3.55.0",
