--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -32,13 +32,12 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v2
-      - name: Install Modules
+      - uses: actions/setup-node@v3
         with:
           node-version: 16.19.0
+      - name: Install Modules
         run: npm i
       - name: Build Pages
-        with:
-          node-version: 16.19.0
         run: npm run build-storybook
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
