--- a/package.json
+++ b/package.json
@@ -45,9 +45,11 @@
     "chartjs-plugin-zoom": "^2.0.0",
     "classnames": "^2.3.2",
     "d3": "^7.8.2",
+    "d3-force": "^3.0.0",
     "d3fc": "^15.2.6",
     "flowbite": "^1.6.3",
     "flowbite-svelte": "^0.29.12",
+    "highcharts": "^10.3.3",
     "jest": "^29.3.1",
     "jest-canvas-mock": "^2.4.0",
     "jest-environment-jsdom": "^29.3.1",
