--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/svelte": "^3.2.2",
     "@testing-library/user-event": "^14.4.3",
+    "@toast-ui/chart": "^4.6.1",
     "@tsconfig/svelte": "^3.0.0",
     "@types/d3": "^7.4.0",
     "@types/jest": "^29.2.5",
