--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "canvas": "^2.11.0",
     "chart.js": "^4.2.0",
     "chartjs-adapter-moment": "^1.0.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "chartjs-plugin-zoom": "^2.0.0",
     "classnames": "^2.3.2",
     "d3": "^7.8.2",
