--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@storybook/addon-interactions": "^6.5.15",
     "@storybook/addon-jest": "^6.5.15",
     "@storybook/addon-links": "^6.5.15",
+    "@storybook/addon-styling": "^0.3.2",
     "@storybook/builder-vite": "^0.2.6",
     "@storybook/svelte": "^6.5.15",
     "@storybook/testing-library": "^0.0.13",
@@ -63,6 +64,7 @@
     "plotly.js-basic-dist": "^2.18.2",
     "postcss": "^8.4.14",
     "postcss-load-config": "^4.0.1",
+    "postcss-loader": "^7.2.4",
     "svelte": "^3.55.0",
     "svelte-chartjs": "^3.1.2",
     "svelte-check": "^2.10.0",
