타입스크립트 빌드 에러 해결 해보기1
증상 :  로컬에선 정상 빌드 되는게 git hub action 통한 호스팅 에서는 안됨
수정 내용 : 파일명을 변경 해봄. 추가로 타입스크립트를 src 이하의 모든 경로에 적용해봄.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "allowSyntheticDefaultImports": true,
     "isolatedModules": true
   },
-  "include": ["src/**/*.d.ts", "src/**/*.ts", "**/*.spec.ts", "src/**/*.js", "src/**/*.svelte"],
+  "include": ["src/**/*.d.ts", "src/**/*.ts", "**/*.spec.ts", "src/**/*.js", "src/**/*.svelte", "src", "src/**/*"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
