--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,33 @@
      */
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
+    "baseUrl": "/",
     "isolatedModules": true
   },
-  "include": ["src/**/*.d.ts", "src/**/*.ts", "**/*.spec.ts", "src/**/*.js", "src/**/*.svelte", "src", "src/**/*"],
+  "include": [
+    "*.d.ts",
+    "src/**/*.d.ts",
+    "src/**/*.js",
+    "src/**/*.ts",
+    "src/**/*.svelte",
+    "src/**/*.d.ts",
+    "src/*.d.ts",
+    "src/**/**/**/*.ts"
+  ],
+  "exclude": [
+    ".routify/*",
+    "node_modules/*",
+    "dist/*",
+    ".svelte/*",
+    ".svelte-kit/*",
+    "build/*",
+    "coverage/*",
+    ".vercel_build_output/*",
+    "functions/*",
+    "static/*",
+    "scripts/*",
+    "storybook-static/*",
+    "vite.config.ts"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
