--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
      */
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
-    "baseUrl": "/",
+    "baseUrl": "./",
     "isolatedModules": true
   },
   "include": [
