타입스크립트 빌드 에러 해결 해보기5
allowImportingTsExtensions 옵션 추가.
- rollup에서 확장자가 없는 경우 제대로 인식을 못할 수도 있다고 함.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
      */
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
+    "allowImportingTsExtensions": true,
     "baseUrl": "/",
     "isolatedModules": true
   },
